--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -16,7 +16,7 @@
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
          
-          <ul class="nav navbar-nav ">
+          <ul class="nav navbar-nav navbar-right">
             <li> <%= link_to  '#' do %>
              
               Requests
@@ -30,7 +30,12 @@
                <i class="fa fa-book" ></i>
             <% end %>
             </li>
-             
+             <li> <%= link_to  '#' do %> 
+              
+               
+               
+            <% end %>
+            </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
