--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -24,7 +24,7 @@
             <% end %>
               
             </li>
-            <li> <%= link_to  '#' do %> 
+            <li> <%= link_to  'weddings' do %> 
               
                Weddings
                <i class="fa fa-book" ></i>
