--- a/app/views/weddings/index.html.erb
+++ b/app/views/weddings/index.html.erb
@@ -21,10 +21,10 @@
           Time 
         </th>
 
-        <th >
+        <th width = 150px >
           Bride 
         </th>
-        <th>
+        <th width = 150px >
           Groom 
         </th>
         <th width = 125px>
