converted to mysql. added mysql dump file

--- a/app/views/weddings/index.html.erb
+++ b/app/views/weddings/index.html.erb
@@ -1,6 +1,6 @@
 <!-- wedding index -->
 <p id="notice"><%= notice %></p>
-
+<%=ENV['C9_USER']%>
 <h1>Listing Weddings</h1> <%= link_to 'New Wedding', new_wedding_path %>
  <div class = "container" id = "windex">
   <table>
