--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -11,65 +11,89 @@
     </div>
   <% end %>
   <!-- beginning of form -->
+  
+  
 
-<div class = "container">
+<div class = "container-fluid">
+  <div class="actions">
+    <%= f.submit "Save" %>
+  </div> 
   <br />
   <div class = "row" id = "brideC">
-    <div class = "col-md-3 ">
-      Bride:&nbsp&nbsp  <%= f.text_field :bride_first_name %>  
+    <div class = "col-sm-3 ">
+     <%= f.label :bride_first_name, "Bride" %>
+     <%= f.text_field :bride_first_name ,:size => "15"%>  
 
     </div>
-    <div class = "col-md-2">
-      <%= f.text_field :bride_last_name %>  
+    <div class = "col-sm-2">
+
+      <%= f.text_field :bride_last_name,:size => "15" %>  
 
     </div>  
 
       
-    <div class = "col-md-3">
-      Phone:&nbsp  <%= f.text_field :bride_phone %> 
+    <div class = "col-sm-3">
+      
+      <%= f.label :bride_phone, "Phone" %>
+      <%= f.text_field :bride_phone,:size => "10" %> 
     </div>
-    <div class = "col-md-3">
-      Email:&nbsp  <%= f.text_field :bride_email %>
+    <div class = "col-sm-4">
+      <%= f.label :bride_email, "Email" %>
+      <%= f.text_field :bride_email, :size => "25" %>
     </div>
   </div>  <br />
   <div class = "row" id = "groom">
-    <div class = "col-md-3">
-      Groom:  <%= f.text_field :groom_first_name %>  
+    <div class = "col-sm-3">
+      <%= f.label :groom_first_name, "Groom" %>
+      <%= f.text_field :groom_first_name,:size => "15" %>  
     </div>
-    <div class = "col-md-2">
-      <%= f.text_field :groom_last_name %>  
+    <div class = "col-sm-2">
+      <%= f.text_field :groom_last_name ,:size => "15"%>  
     </div>
-    <div class = "col-md-3">
-      Phone:&nbsp  <%= f.text_field :groom_phone %>
+    <div class = "col-sm-3">
+      <%= f.label :groom_phone, "Phone" %>
+      <%= f.text_field :groom_phone,:size => "10" %>
     </div>
-    <div class = "col-md-3">
-      Email:&nbsp  <%= f.text_field :groom_email %>
+    <div class = "col-sm-4">
+      <%= f.label :groom_email, "Email" %>
+      <%= f.text_field :groom_email,:size => "25" %>
     </div> 
   </div><br/>
   <div class = "row" id = "location">
-    <div class = "col-md-4">
-      Location: &nbsp <%= f.text_field :location, :size=>"40" %> 
+    <div class = "col-sm-6">
+      <%= f.label :location, "location" %>
+      <%= f.text_field :location, :size=>"40" %> 
     </div>
-    <div class = "col-md-3">
-      Date: &nbsp <%= f.date_field :wedding_date %> 
+    <div class = "col-sm-3">
+      <%= f.label :wedding_date, "Date" %>
+      <%= f.date_field :wedding_date, :size => "15" %> 
     </div>
-    <div class = "col-md-3">
-      Time: &nbsp <%= f.time_field :wedding_time %> 
+    <div class = "col-sm-3">
+      <%= f.label :wedding_time, "Time" %>
+      <%= f.time_field :wedding_time, :size => "15"  %> 
     </div>
-  </div><br> Rehearsal
-  <div class = "row" id = "rehearsal">
-    <div class = "col-md-1">
+  </div><br> 
+  
+    Rehearsal
       <%=  f.check_box  :rehearsal ,class: "checkbox-inline" %> 
+ <br/><br/>
+  <div class = "row" id = "rehearsal">
+    
+    <div class = "col-sm-6">
+     <%= f.label :rehearsal_location, "location" %>
+     <%= f.text_field :rehearsal_location , :size => "40"%> 
     </div>
-    <div class = "col-md-4">
-      Location: &nbsp <%= f.text_field :rehearsal_location , :size => "40"%> 
+     <div class = "col-sm-3"> 
+      <%= f.label :rehearsal_date, 'Date' %>
+      <%= f.date_field :rehearsal_date %> 
     </div>
-    <div class = "col-md-3">
-      Date: &nbsp <%= f.date_field :rehearsal_date %> 
+    <div class = "col-sm-3">
+      <%= f.label :rehearsal_tine, 'Time' %>
+      <%= f.time_field :rehearsal_time,:size => "10" %> 
     </div>
-    <div class = "col-md-3">
-      Time: &nbsp <%= f.time_field :rehearsal_time %> 
-    </div>
+    
+    
+   
   </div>
   <br />
   
@@ -77,7 +101,7 @@
   <div class="field">
     <%= f.radio_button :package_type ,"Budget" %>
     <%= f.label :package_type ,"Budget" %>
-    <%= f.radio_button :package_type ,"Budget" %>
+    <%= f.radio_button :package_type ,"Basic" %>
     <%= f.label :package_type ,"Basic" %>
     <%= f.radio_button :package_type ,"Standard" %>
     <%= f.label :package_type ,"Standard" %>
@@ -85,9 +109,6 @@
   
 <!-- here is the end -->
     
-         
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+   
+  
 <% end %>
