added inquiry form with wedding info

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,6 +76,9 @@ h1, h2, h3 {
   display: none;
 }   
 
-#rehearsal {
+#wedding-with-line {
+  border-bottom: 2px solid #ccc;
+}
+#inquiry-with-line {
   border-bottom: 2px solid #ccc;
 }
