--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -62,7 +62,7 @@
   <div class = "row" id = "location">
     <div class = "col-sm-6">
       <%= f.label :location, "location" %>
-      <%= f.text_field :location, :size=>"50" %> 
+      <%= f.text_field :location, :size=>"45" %> 
     </div>
     <div class = "col-sm-3">
       <%= f.label :wedding_date, "Date" %>
@@ -70,7 +70,7 @@
     </div>
     <div class = "col-sm-3">
       <%= f.label :wedding_time, "Time" %>
-      <%= f.time_select :wedding_time, :size => "15"  %> 
+      <%= f.time_field :wedding_time, :size => "15"  %> 
     </div>
   </div><br> 
   
