--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,8 @@
 <h1 class ="text-center">Welcome to Minnesota Officiants </h1>
+<br />
+<p >
+  <div class = "container text-center" >
+    <%= button_to "Log In", log_in_path , method: :get, class: "btn btn-success"  %>
+
+  </div>
+</p>
