added admin listings and require login messageing

--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -66,8 +66,8 @@
   </div><br> 
   <div class = "row ", id= "inquiry-with-line">
      <div class="field">
-      <%= w.label :comments %>
-      <%= w.text_area :comments %>
+      <%= w.label :comments %><br/>
+      <%= w.text_area :comments ,:size => "65 x 3"%>
     </div>
     
   </div>
