--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <div class = 'container-fluid'>
       <%= render 'shared/menu' %>
+      <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
   </body>
