--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -30,11 +30,30 @@
                <i class="fa fa-book" ></i>
             <% end %>
             </li>
-             <li> <%= link_to  '#' do %> 
-              
-               
-               
-            <% end %>
+            <% if logged_in? %>
+                <li class="dropdown" >
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                     <%= current_user.first_name %>  
+                     <span class="caret"></span>
+                  </a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to "Edit info" , edit_user_path(current_user) %></li>
+                    
+                   
+                    <li><%= link_to "email templates", root_path %></li>
+
+                    <li><a href="#">Reports</a></li>
+                    <li class = "divider"></li>
+                    <li><%= link_to "Log out",  log_out_path %></li>
+                  </ul>
+                  <% else %>
+                  <li class="dropdown" style="border-right:2px solid silver;">
+                    <%= link_to "Log in",  log_in_path %>
+                    
+                  </li>
+            
+              <% end %>
+            
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
