--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -76,9 +76,31 @@
    
   </div>  <!--end wedding-->
  
-  
+  <!--add the buttons to close or book-->
 
-  
+  <div class="actions">
+    <div class = "panel panel-default" > 
+      <div class="row">
+        <div class = "col col-sm-2" >
+          <%= link_to close_wedding_inquiry_path(@inquiry) ,  method: :post ,data: { confirm: 'Are you sure?' } do  %>
+            <span class ="btn btn-default btn-success"> close </span>
+          <% end %>
+        </div>
+        <div class = "col col-sm-2" >
+          <%= link_to book_wedding_inquiry_path(@inquiry) ,  method: :post  do  %>
+            <span class ="btn btn-default btn-success"> Book </span>
+          <% end %>
+        </div>
+        <div class = "col col-sm-3">
+          <div class="field">
+            <%= f.label :closed %>
+            <%= f.check_box :closed %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--end buttons to clopse/book-->
   <div class="row" >
     <div class = "col-sm-4">
       <div class="field">
@@ -131,10 +153,7 @@
 
   
 
-  <div class="field">
-    <%= f.label :closed %>
-    <%= f.check_box :closed %>
-  </div>
+  
 </div>
   <div class="actions">
     <%= f.submit "Save" %>
