--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,7 +1,8 @@
  <!-- this is the nav demo-->
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class='container menu-container'>
-        <div class="navbar-header">
+        <div class="navbar-header collapse navbar-collapse">
+         
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -17,12 +18,13 @@
         <div class="collapse navbar-collapse" id="main-nav-collapse">
          
           <ul class="nav navbar-nav navbar-right">
-            <li> <%= link_to  inquiries_path do %>
-             
-              Requests
-               <i class = 'fa fa-question-circle-o' ></i>
+          
+            <li> <%= link_to   Inquiry do %>
+              Request
+              <i class = 'fa fa-question-circle-o' ></i>
             <% end %>
-              
+             
+           
             </li>
             <li> <%= link_to  weddings_path do %> 
               
@@ -30,11 +32,10 @@
                <i class="fa fa-book" ></i>
             <% end %>
             </li>
+            <!--add a muser menu-->
             <% if logged_in? %>
                 <li class="dropdown" >
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                     <%= current_user.first_name %>  
-                     <span class="caret"></span>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.first_name %>  <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu" role="menu">
                     <li><%= link_to "Edit info" , edit_user_path(current_user) %></li>
@@ -47,7 +48,7 @@
                     <li><%= link_to "Log out",  log_out_path %></li>
                   </ul>
                   <% else %>
-                  <li class="dropdown" style="border-right:2px solid silver;">
+                  <li class="dropdown" >
                     <%= link_to "Log in",  log_in_path %>
                     
                   </li>
@@ -55,7 +56,9 @@
               <% end %>
             
             </li>
+            <!--end user menu-->
           </ul>
+      
         </div><!-- /.navbar-collapse -->
       </div>
     </nav>
