--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -12,6 +12,9 @@
   <% end %>
   <div class='container-fluid'>
     <%= f.fields_for :wedding do |w| %>
+    <div class="form-actions">
+      <%= f.submit "Save", class: 'btn btn-success' %>
+    </div><br />
     <div class = "row" >
       <div class = "col-sm-3 ">
        <%= w.label :bride_first_name, "Bride" %>
@@ -64,7 +67,7 @@
     </div>
    
   </div><br> 
-  <div class = "row ", id= "inquiry-with-line">
+  <div class = "row last-item">
      <div class="field">
       <%= w.label :comments %><br/>
       <%= w.text_area :comments ,:size => "65 x 3"%>
@@ -83,12 +86,12 @@
       <div class="row">
         <div class = "col col-sm-2" >
           <%= link_to close_wedding_inquiry_path(@inquiry) ,  method: :post ,data: { confirm: 'Are you sure?' } do  %>
-            <span class ="btn btn-default btn-success"> close </span>
+            <span class ="btn btn-default btn-info"> Close </span>
           <% end %>
         </div>
         <div class = "col col-sm-2" >
           <%= link_to book_wedding_inquiry_path(@inquiry) ,  method: :post  do  %>
-            <span class ="btn btn-default btn-success"> Book </span>
+            <span class ="btn btn-default btn-info"> Book </span>
           <% end %>
         </div>
         <div class = "col col-sm-3">
@@ -141,21 +144,22 @@
     </div>
    
     </div>
-  <div class="field">
-    <%= f.label :intro_meeting %>
-    <%= f.check_box :intro_meeting %>
-  </div>
+    <div class = "row" >
+      <div class="field">
+        <%= f.label :intro_meeting %>
+        <%= f.check_box :intro_meeting %>
+      </div>
+    
+      <div class="field last-item" >
+        <%= f.label :meeting_date %>
+        <%= f.date_select :meeting_date,  use_month_numbers:  true, order: [ :month,:day, :year]  %>
+      </div><br />
+    </div>
+    
 
-  <div class="field">
-    <%= f.label :meeting_date %>
-    <%= f.date_select :meeting_date,  use_month_numbers:  true, order: [ :month,:day, :year]  %>
-  </div>
-
+ 
+  </div> <!--end fluid container -->
+ 
   
-
-  
-</div>
-  <div class="actions">
-    <%= f.submit "Save" %>
-  </div>
 <% end %>
+
