--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -120,7 +120,12 @@
       <!-- </div> -->
 
     </div>
+    <div class = "last-item" >
+      <%= link_to new_wedding_payment_path(@wedding) do  %>
+         <span class ="btn btn-default btn-success" > Add Payment </span>
+      <% end %>
 
+    </div>
 
      
 
