--- a/app/views/weddings/edit.html.erb
+++ b/app/views/weddings/edit.html.erb
@@ -1,7 +1,5 @@
 <b>Editing Wedding</b> 
-&nbsp&nbsp<%=   @wedding.wedding_date.strftime("%Y-%m-%d") %>  <%= @wedding.bride_first_name %> <hr>
+&nbsp&nbsp  <%= @wedding.get_title %> <hr>
   <%= render 'form' %>
 
-<!--
-<%= link_to 'Show', @wedding %> -->
-<%= link_to 'Back', weddings_path %>
+<%= link_to 'Back', edit_wedding_path(@wedding) %>
