--- a/app/views/inquiries/edit.html.erb
+++ b/app/views/inquiries/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Inquiry</h1>
+<b>Editing Inquiry</b>  <%= @inquiry.wedding.get_header %> <br />
 
 <%= render 'form', inquiry: @inquiry %>
 
