--- a/app/views/inquiries/show.html.erb
+++ b/app/views/inquiries/show.html.erb
@@ -36,8 +36,8 @@
 </p>
 
 <p>
-  <strong>Contacted phone-date:</strong>
-  <%= @inquiry.contacted_phone-date %>
+  <strong>Contacted phone_date:</strong>
+  <%= @inquiry.phone_call_date %>
 </p>
 
 <p>
