--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -194,12 +194,13 @@
            <% templates = EmailTemplate
                             .where("template_type='Request'")
                             .where("user_id=0 or user_id=?" , 
-                              session[:user_id]).collect {|et| [et.template_title, et.id]} %>
+                              session[:user_id]).order(:template_title).collect {|et| [et.template_title, et.id]} %>
            <%= select "etemp", "id",  templates, {}, { onchange: 'onTemplateSelectChange(event)' } %>
             <!--add button to send email--> 
            
            &emsp;
            <a id="openEmailClient" href="#" style="visibility: hidden">
+
             <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
            </a>
 
