--- a/app/views/inquiries/index.html.erb
+++ b/app/views/inquiries/index.html.erb
@@ -41,5 +41,5 @@
 
   <br>
   
-  <%= link_to 'New Inquiry', new_inquiry_path %>
+   <!-- <%= link_to 'New Inquiry', new_inquiry_path %> -->
 </div>
