--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Inquiry</h1>
+<b>New Inquiry for </b>  <%= @inquiry.wedding.get_title %> <br />
 
-<%= render 'form', inquiry: @inquiry %>
+<%= render 'admin-form', inquiry: @inquiry %>
 
 <%= link_to 'Back', inquiries_path %>
