--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -39,9 +39,9 @@
                   </a>
                   <ul class="dropdown-menu" role="menu">
                     <li><%= link_to "Edit info" , edit_user_path(current_user) %></li>
-                    
+                    <li><a href="#">Email Templates</a></li>
                    
-                    <li><%= link_to "email templates", root_path %></li>
+                    <!-- <li><%= link_to "email templates", root_path %></li> -->
 
                     <li><a href="#">Reports</a></li>
                     <li class = "divider"></li>
