added alert to dropdown menu under construction

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,11 @@
       <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
+    <script type="text/javascript">
+      function underConstruction(event){
+        alert("this is still under construction")
+      }
+
+    </script>
   </body>
 </html>
