did cleanup and finished the assign officiant interface need commit

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,8 +74,11 @@ h1, h2, h3 {
 
 .alert-notice {
   display: none;
-}   
-
+} 
+  
+span + span {
+    margin-left: 10px;
+}
 #wedding-with-line {
   border-bottom: 2px solid #ccc;
 }
