--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -195,7 +195,7 @@
                             .where("template_type='Request'")
                             .where("user_id=0 or user_id=?" , 
                               session[:user_id]).order(:template_title).collect {|et| [et.template_title, et.id]} %>
-           <%= select "etemp", "id",  templates, {}, { onchange: 'onTemplateSelectChange(event)' } %>
+           <%= select "etemp", "id",  templates, {include_blank: 'None'}, { onchange: 'onTemplateSelectChange(event)' } %>
             <!--add button to send email--> 
            
            &emsp;
