--- a/app/views/weddings/index.html.erb
+++ b/app/views/weddings/index.html.erb
@@ -1,7 +1,12 @@
 <!-- wedding index -->
 <p id="notice"><%= notice %></p>
 <!-- <%=current_user.first_name %> -->
-<h1>Listing Weddings</h1> <%= link_to 'New Wedding', new_wedding_path %>
+
+<h1>Listing Weddings</h1> 
+ <%= link_to get_new_web_requests_wedding_path(@weddings) ,  method: :get  do  %>
+    <span class ="btn btn-default btn-info"> Refresh </span>
+  <% end %>
+<%= link_to 'New Wedding', new_wedding_path %>
  <div class = "container" id = "windex">
   <table>
     <thead>
