added calander object in bootstrap to inquiry form

--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -59,7 +59,7 @@
     </div>
     <div class = "col-sm-3">
       <%= w.label :wedding_date, "Date" %>
-      <%= w.date_field :wedding_date, :size => "15" %> 
+      <%= w.date_field :wedding_date, "data-provide" => 'datepicker'   %> 
     </div>
     <div class = "col-sm-3">
       <%= w.label :wedding_time, "Time" %>
@@ -109,7 +109,7 @@
    
       <div class="field">
         <%= f.label :email_sent_date %>
-        <%= f.date_field :email_sent_date %>
+        <%= f.date_field :email_sent_date  %>
         <!--<%= f.date_select :email_sent_date, include_blank: true, use_month_numbers:  true, order: [:month,:day,  :year] %>-->
       </div>
      </div>
@@ -134,7 +134,7 @@
     
       <div class="field">
         <%= f.label :phone_call_date %>
-        <%= f.date_field :phone_call_date %>
+        <%= f.text_field :phone_call_date,  "data-provide" => 'datepicker' %>
         <!--<%= f.date_select :phone_call_date , include_blank: true,use_month_numbers:  true, order: [ :month, :day,:year] %>-->
       </div>
     </div>
