added wedding date calander for admin edit form in weddings

--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -1,5 +1,5 @@
 <b>New Inquiry for </b>  <%= @inquiry.wedding.get_title %> <br />
 
-<%= render 'admin-form', inquiry: @inquiry %>
+<%= render 'admin_form', inquiry: @inquiry %>
 
-<%= link_to 'Back', inquiries_path %>
+<%= link_to 'Back', weddings_path %>
