--- a/app/views/inquiries/_admin_form.html.erb
+++ b/app/views/inquiries/_admin_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(inquiry) do |f| %>
-  <% if inquiry.errors.any? %>
+<%= form_for( [@wedding,@inquiry] ) do |f| %>
+ <!--  <% if inquiry.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(inquiry.errors.count, "error") %> prohibited this inquiry from being saved:</h2>
 
@@ -9,7 +9,7 @@
       <% end %>
       </ul>
     </div>
-  <% end %> <!-- of error -->
+  <% end %> <!-- of error --> -->
   <script type="text/javascript">
     function onOfficiantSelectChange (event) {
       var userID = event.target.value
@@ -27,7 +27,9 @@
     }
   </script>
   <div class='container-fluid'>
-
+  <div class="form-actions">
+      <%= f.submit "Save", class: 'btn btn-success' %>
+    </div><br />
    <% officiants = User.where("active = TRUE").order(:first_name).collect  {|of| [of.first_name + ' ' + of.last_name, of.id]} %>
            <%= select "oname", "id",  officiants, {include_blank: 'None'}, { onchange: 'onOfficiantSelectChange(event)' } %>
 
